<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/disto_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/status"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/background_light"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            />

        <TextView
            android:id="@+id/deviceName"
            android:text=""
            android:layout_gravity="start|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/background_light"

            />


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:id="@+id/UpdateLayout"
        android:layout_above="@+id/ButtonLayout"
        android:layout_alignParentEnd="true"

        android:layout_width="100dp"
        >

        <Button
            android:id="@+id/read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundbuttons_basecolor"
            android:text="@string/read"
            android:textSize="12sp"/>

        <Button
            android:text="@string/clear"
            android:id="@+id/clear"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundbuttons_accentcolor"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MeasureLayout"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:id="@+id/measurements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/measurements"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/modelName"
            android:text=""
            android:layout_gravity="start|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/background_dark"

            />

        <GridLayout
            android:id="@+id/GridLayout1"
            android:layout_height="200dp"
            android:layout_width="221dp"
            android:columnCount="2"
            android:rowCount="9"
            android:orientation="horizontal"
            android:background="@drawable/measurements_border"
            tools:context=".GridXMLActivity">

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/distance"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/distanceUnitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/distunit"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/distanceUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/inclinationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/inclination"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/inclination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/inclinationUnitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/inclinationUnit"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/inclinationUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/directionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/direction"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/directionUnitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/directionunit"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/directionUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="10dp"
                android:text="@string/default_value"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

        </GridLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonLayout"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/MeasureLayout"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:id="@+id/CommandLayout"
            android:layout_width="180dp">


            <Button
                android:text="@string/send_command"
                android:id="@+id/sendcommand"
                android:background="@drawable/roundbuttons_basecolor"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <Button
                android:id="@+id/startTracking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/roundbuttons_basecolor"
                android:text="@string/start_tracking"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:id="@+id/distLayout"
            android:layout_alignParentEnd="true"
            android:layout_width="180dp">

            <Button
                android:text="@string/dist"
                android:layout_width="match_parent"
                android:id="@+id/dist"
                android:background="@drawable/roundbuttons_basecolor"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/stop_tracking"
                android:layout_width="match_parent"
                android:id="@+id/stopTracking"
                android:background="@drawable/roundbuttons_basecolor"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>



    </RelativeLayout>


</RelativeLayout>
